--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,2 +1,8 @@
 @import "custom-mixins.less";
 // Mixins in here
+.nav-a (@text-decoration: none, @padding: 0 2rem, @color: black, @font-size: 1.6rem) {
+    text-decoration: @text-decoration;
+    padding: @padding;
+    color: @color;
+    font-size: @font-size;
+}
