--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,17 @@
 // Navigation Styles here
+.main-nav {
+    max-width: 100%;
+    margin: @centered-margin;
+    padding: 2rem 0;
+    border-bottom: @dashed-border;
+    .flex-display;
+    .justify-content(space-around);
+  .nav-wrapper {
+    .flex-display;
+    .justify-content(flex-end);
+    .align-items(center);
+    a {
+        .nav-a;
+    }
+  }
+}
