moving to mobile styling

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -10,7 +10,7 @@
     font-size: @font-size;
 }
 
-.fun-button() {
+.fun-button(@background-color: @button-bg, @color: @white, @padding: 1rem, @font-size: 1.6rem, @width: 85%, @text-align: center) {
     .rounded();
     background-color: @button-bg;
     color: @white;
