mobile nav and header done

--- a/less/global.less
+++ b/less/global.less
@@ -9,6 +9,9 @@ html {
 html, body {
   font-family: 'Roboto', sans-serif;
   // background: red;
+  @media @mobile {
+    
+  }
 }
 
 h1, h2, h3, h4, h5 {
