--- a/less/header.less
+++ b/less/header.less
@@ -1,6 +1,9 @@
 header {
     margin: @centered-margin;
     max-width: 800px;
+    @media @mobile {
+        max-width: 450px;
+    }
     h2 {
         padding-top: 1rem;
     }
