--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,10 +6,21 @@
     border-bottom: @dashed-border;
     .flex-display;
     .justify-content(space-around);
+    @media @mobile {
+        .flex-direction(column);
+        .align-items(center);
+    }
+    h1 {
+        @media @mobile {
+            padding-bottom: 1rem;
+        }
+    }
   .nav-wrapper {
     .flex-display;
     .justify-content(flex-end);
     .align-items(center);
+    @media @mobile {
+    }
     a {
         .nav-a;
     }
