--- a/less/variables.less
+++ b/less/variables.less
@@ -16,4 +16,4 @@
 @sandy-beach: #FFEBCD;
 
 @centered-margin: 0 auto;
-@dashed-border: 2px dashed @silver;
+@dashed-border: 2px dashed @navigation-border;
