--- a/css/index.css
+++ b/css/index.css
@@ -177,6 +177,17 @@ img {
   display: flex;
   justify-content: space-around;
 }
+@media (max-width: 500px) {
+  .main-nav {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media (max-width: 500px) {
+  .main-nav h1 {
+    padding-bottom: 1rem;
+  }
+}
 .main-nav .nav-wrapper {
   display: flex;
   justify-content: flex-end;
@@ -187,6 +198,11 @@ img {
   padding: 0 2rem;
   color: black;
   font-size: 1.6rem;
+}
+@media (max-width: 500px) {
+  .main-nav .nav-wrapper a {
+    padding: 0 3rem;
+  }
 }
 .footer {
   width: 100%;
@@ -203,8 +219,21 @@ header {
   margin: 0 auto;
   max-width: 800px;
 }
+@media (max-width: 500px) {
+  header {
+    max-width: 450px;
+  }
+}
 header h2 {
   padding-top: 1rem;
+}
+.home {
+  border-top: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home {
+    max-width: 450px;
+  }
 }
 .home .content-section {
   margin: 30px 0;
