--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,8 @@
 .home {
-
+  border-top: @dashed-border;
+  @media @mobile {
+    max-width: 450px;
+}
   .content-section {
     margin: 30px 0;
     display: flex;
