--- a/less/mixins.less
+++ b/less/mixins.less
@@ -8,6 +8,9 @@
     padding: @padding;
     color: @color;
     font-size: @font-size;
+    @media @mobile {
+        padding: 0 3rem;
+    }
 }
 
 .fun-button(@background-color: @button-bg, @color: @white, @padding: 1rem, @font-size: 1.6rem, @width: 85%, @text-align: center) {
