--- a/less/home-page.less
+++ b/less/home-page.less
@@ -8,18 +8,25 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
+    @media @mobile {
+      .flex-direction(column);
+    }
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media @mobile {
+        width: 100%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
-
+      @media @mobile {
+        width: 100%;
+      }
       img {
         border-radius: 10px;
       }
@@ -38,13 +45,18 @@
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+      @media @mobile {
+        .flex-order(1);
+      }
     }
   }
 
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
-
+    @media @mobile {
+      width: 100%;
+    }
     img {
       border-radius: 10px;
     }
@@ -55,10 +67,17 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
-
+    @media @mobile {
+      .flex-direction(column);
+    }
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      @media @mobile {
+        width: 100%;
+        padding-left: 2rem;
+        padding-right: 2rem;
+      }
       .btn {
         .fun-button;
       }
