--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,12 +6,12 @@
     border-bottom: @dashed-border;
     .flex-display;
     .justify-content(space-around);
-    @media @mobile {
+    @media @tablet {
         .flex-direction(column);
         .align-items(center);
     }
     h1 {
-        @media @mobile {
+        @media @tablet {
             padding-bottom: 1rem;
         }
     }
