--- a/less/variables.less
+++ b/less/variables.less
@@ -1,5 +1,7 @@
 // Media Queries
+@tablet: ~"(max-width: 800px)";
 @mobile: ~"(max-width: 500px)";
+@mobile-xs: ~"(max-width: 320px)";
 
 // Color assignments 
 @font-color: @shark;
