--- a/less/header.less
+++ b/less/header.less
@@ -4,6 +4,9 @@ header {
     @media @mobile {
         max-width: 450px;
     }
+    @media @mobile-xs {
+        max-width: 300px;
+    }
     h2 {
         padding-top: 1rem;
     }
