--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,7 +2,10 @@
   border-top: @dashed-border;
   @media @mobile {
     max-width: 450px;
-}
+  }
+  @media @mobile-xs {
+    max-width: 300px;
+  }
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -11,8 +14,7 @@
     @media @mobile {
       .flex-direction(column);
     }
-   
-    
+
     .text-content {
       width: 48%;
       padding-right: 1%;
@@ -26,6 +28,7 @@
       padding-left: 1%;
       @media @mobile {
         width: 100%;
+        padding-left: 0;
       }
       img {
         border-radius: 10px;
@@ -47,6 +50,8 @@
       padding-left: 0;
       @media @mobile {
         .flex-order(1);
+        padding-right: 0;
+        width: 100%;
       }
     }
   }
@@ -78,9 +83,15 @@
         padding-left: 2rem;
         padding-right: 2rem;
       }
+      h4,
+      p {
+        @media @mobile {
+          text-align: center;
+        }
+      }
       .btn {
         .fun-button;
       }
     }
   }
-}// home
+}
