--- a/less/mixins.less
+++ b/less/mixins.less
@@ -11,6 +11,9 @@
     @media @mobile {
         padding: 0 3rem;
     }
+    @media @mobile-xs {
+        padding: 0 2rem;
+    }
 }
 
 .fun-button(@background-color: @button-bg, @color: @white, @padding: 1rem, @font-size: 1.6rem, @width: 85%, @text-align: center) {
@@ -24,4 +27,15 @@
     @media @mobile {
         width: 100%;
     }
+    @media @mobile-xs {
+        width: 80%;
+        margin: @centered-margin;
+    }
 }
+
+// .slideIn(@name, @from, @to) {
+//     @keyframes @name{
+//         0% {transform: @from;}
+//         100% {transform: @to;}
+//     }
+// }
