--- a/less/header.less
+++ b/less/header.less
@@ -1,6 +1,9 @@
 header {
     margin: @centered-margin;
     max-width: 800px;
+    @media @tablet {
+        max-width: 730px;
+    }
     @media @mobile {
         max-width: 450px;
     }
