--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,8 @@
 .home {
   border-top: @dashed-border;
+  @media @tablet {
+    max-width: 740px;
+  }
   @media @mobile {
     max-width: 450px;
   }
