--- a/less/mixins.less
+++ b/less/mixins.less
@@ -8,6 +8,9 @@
     padding: @padding;
     color: @color;
     font-size: @font-size;
+    @media @tablet {
+        padding: 0 4rem;
+    }
     @media @mobile {
         padding: 0 3rem;
     }
