--- a/less/header.less
+++ b/less/header.less
@@ -3,6 +3,7 @@ header {
     max-width: 800px;
     @media @tablet {
         max-width: 730px;
+        padding: 0 2rem;
     }
     @media @mobile {
         max-width: 450px;
