--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,7 @@
   border-top: @dashed-border;
   @media @tablet {
     max-width: 740px;
+    padding: 0 2rem;
   }
   @media @mobile {
     max-width: 450px;
