--- a/less/mixins.less
+++ b/less/mixins.less
@@ -27,8 +27,8 @@
     font-size: 1.6rem;
     width: 85%;
     text-align: center;
-    @media @mobile {
-        width: 100%;
+    @media @tablet {
+        width: 98%;
     }
     @media @mobile-xs {
         width: 80%;
