--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,6 +1,6 @@
 // Navigation Styles here
 .main-nav {
-    max-width: 100%;
+    max-width: 1000px;
     margin: @centered-margin;
     padding: 2rem 0;
     border-bottom: @dashed-border;
